Add gradient color to header

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,6 +1,6 @@
 header {
   padding: 1rem 3rem;
-  background-color: cornflowerblue;
+  background: linear-gradient(175deg, cornflowerblue, rgb(100, 114, 237));
 }
 
 header h1 {
