--- a/src/styles/MainContainer.css
+++ b/src/styles/MainContainer.css
@@ -7,4 +7,7 @@ main {
   justify-self: center;
   border-radius: 1rem;
   box-shadow: 0 0 10px rgb(182, 182, 182);
+
+  display: grid;
+  gap: 4rem;
 }
