--- a/src/styles/MainContainer.css
+++ b/src/styles/MainContainer.css
@@ -11,3 +11,37 @@ main {
   display: grid;
   gap: 4rem;
 }
+
+section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.section-title {
+  margin: 1rem 0;
+  padding: 0 1rem;
+  font-size: 2rem;
+  border-top: 1px solid hsl(234, 50%, 40%);
+  border-bottom: 1px solid hsl(234, 50%, 40%);
+}
+
+.buttons-container {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.buttons-container button {
+  flex-grow: 0;
+}
+
+button {
+  align-self: center;
+}
+
+h1,
+h2,
+h3 {
+  color: hsl(234, 50%, 40%);
+}
