Replace grid with flex to remove gap

--- a/src/styles/MainContainer.css
+++ b/src/styles/MainContainer.css
@@ -9,7 +9,8 @@ main {
   box-shadow: 0 0 10px rgb(182, 182, 182);
   box-sizing: border-box;
 
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 4rem;
 }
 
