--- a/src/styles/MainContainer.css
+++ b/src/styles/MainContainer.css
@@ -52,3 +52,17 @@ h3 {
 .hide-buttons button {
   display: none;
 }
+
+@media (max-width: 500px) {
+  main {
+    width: 100%;
+    padding: 1rem;
+    margin: 0;
+    border-radius: 0;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+}
